z-index fix

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ body {
 main {
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
 }
 
 .main-img {
@@ -42,6 +43,8 @@ main {
     width: 100vw;
     height: 100vh;
     background-color: #44cff0;
+    transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, 0);
 }
 .filter-bg {
     background-color: #0d0d13;
